added services for Search

--- a/ShopEasy/ShopEasy.Api.Search/appsettings.json
+++ b/ShopEasy/ShopEasy.Api.Search/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "Services": {
-    "http://localhost:6142"
+    "Customers": "http://localhost:6142",
+    "Orders": "http://localhost:35079",
+    "Products": "http://localhost:20284"
   }
 
 }
